# 13f-etl

./: .gitignore  README.md
get_filings/: Dockerfile  pyproject.toml  wf-template.json
get_filings/src/: get_filings.py
process_filings/: Dockerfile  pyproject.toml  wf-template.json
process_filings/src/: process_filings.py
